summative.moria.Moria.scala.error
Compilation error:
Moria:12: error: '(' expected but identifier found.
  if getX()!=18{
     ^